# cpp-migration-guide

chapter-01-evolution/mini-project/: legacy_inventory.cpp
chapter-02-auditing/mini-project/: migration_audit.cpp
chapter-03-toolchain/ci-cd/: github-actions.yml
chapter-03-toolchain/cmake-templates/cpp23-starter/: CMakeLists.txt  main.cpp
chapter-04-concepts/before-after/: concepts_version.cpp  sfinae_version.cpp
chapter-04-concepts/mini-project/math_library/: math_library.cpp
chapter-06-coroutines/before-after/: callback_version.cpp  coroutine_version.cpp
chapter-07-ranges/before-after/: ranges_version.cpp  raw_loop_version.cpp
chapter-08-cpp23-qol/before-after/: exception_version.cpp  expected_version.cpp
chapter-09-formatting/before-after/: printf_version.cpp  stdprint_version.cpp
chapter-10-cpp23-library/before-after/: mdspan_version.cpp  raw_array_version.cpp
chapter-13-contracts/before-after/: contracts_version.cpp  manual_validation_version.cpp
chapter-14-playbook/sample-legacy-project/: transaction_processor.cpp
